  * Support upstream/VERSION tags, for compatibility with git-
    buildpackage. LP: #551362
  * Support upstream tarballs without a pristine tar delta.

  [ Robert Collins ]
  * Add import-upstream command which imports an upstream - useful for
    migrating existing packaging branches into pristine-tar using mode.
  * Stop stripping .bzrignore from tarball imports. LP: #496907

 -- Jelmer Vernooij <jelmer@debian.org>  Thu, 15 Apr 2010 19:28:25 +0200

bzr-builddeb (2.4.2) UNRELEASED; urgency=low

  [ Jelmer Vernooij ]
  * Avoid AttributeError in the python-apt complatibility code.

  [ James Westby ]
  * Add 'maverick' as an Ubuntu release.

 -- James Westby <james.westby@ubuntu.com>  Tue, 13 Apr 2010 10:27:00 +0100

bzr-builddeb (2.4.1) unstable; urgency=low

  [ Colin Watson ]
  * Consider a .dsc without a Format: to be Format: 1.0.

  [ Jelmer Vernooij ]
  * Fix use of getattr to have 3 arguments to avoid exception. (LP: #572093)

  [ James Westby ]
  * Fix for Launchpad's multi-version support.

 -- James Westby <james.westby@ubuntu.com>  Thu, 18 Mar 2010 14:19:53 -0400

bzr-builddeb (2.4) unstable; urgency=low

  [ Jelmer Vernooij ]
  * Switch section to vcs.
  * Allow the directory service to work with older version of python-apt.
  * Fix compatibility with versions of bzr that don't have
  bzrlib.utils.configobj. (Closes: #572093)

  [ James Westby ]
  * Correct typo that causes packages with .orig.tar.bz2 to fail to build.
  * Also merge tags in merge-package.
  * Adapt to the python-apt 0.8 API. Thanks to Julian Andres Klode.
    (Closes: #572093)
  * Fix merge-upstream with just a branch. (LP: #528273)

  [ John Arbash Meinel ]
  * Improve the changelog merge hook to be smarter when both sides change.

  [ Steve Langasek ]
  * Make merge-upstream --v3 unpack .tar.bz2 with the correct arguments.
    (LP: #529900)

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 13 Feb 2010 01:16:00 +0100

bzr-builddeb (2.3) experimental; urgency=low

  [ James Westby ]