@@ -19,7 +19,11 @@ bzr-builddeb (2.5) UNRELEASED; urgency=low
     migrating existing packaging branches into pristine-tar using mode.
   * Stop stripping .bzrignore from tarball imports. LP: #496907
 
- -- Jelmer Vernooij <jelmer@debian.org>  Thu, 15 Apr 2010 19:28:25 +0200
+  [ James Westby ]
+  * Add a --package-merge option to builddeb to build with the -v and -sa
+    appropriate when doing a merge from Debian or similar.
+
+ -- James Westby <james.westby@ubuntu.com>  Thu, 06 May 2010 15:22:40 +0100
 
 bzr-builddeb (2.4.2) UNRELEASED; urgency=low
 
